--- a/KiemTra_NguyenMinhNhat/Web.config
+++ b/KiemTra_NguyenMinhNhat/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -67,7 +67,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Test01ConnectionString" connectionString="Data Source=LAPTOP-2UM7T96N\NHATNGUYENSERVER;Initial Catalog=Test01;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="Test01ConnectionString" connectionString="Data Source=LAPTOP-2UM7T96N\NHATNGUYENSERVER;Initial Catalog=Test01;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
